force-app/main/default/objects/Distressed_Note_Staging__c/Distressed_Note_Staging__c.object-meta.xml
<CustomObject>
    <description>Staging Table for Distressed Notes</description>
    <label>Distressed Note Staging</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Distressed Note Staging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distressed Note Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>