force-app/main/default/objects/Distressed_Note_Staging__c/fields/Agency_Id__c.field-meta.xml
<CustomField>
    <fullName>Agency_Id__c</fullName>
    <description>Set product agency</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Set product agency</inlineHelpText>
    <label>Agency Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>