force-app/main/default/objects/Distressed_Note_Staging__c/fields/Data_Id__c.field-meta.xml
<CustomField>
    <fullName>Data_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>