force-app/main/default/objects/Distressed_Note_Staging__c/fields/Document_Storage__c.field-meta.xml
<CustomField>
    <fullName>Document_Storage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Storage</label>
    <referenceTo>Document_Storage__c</referenceTo>
    <relationshipLabel>Distressed Note Stagings</relationshipLabel>
    <relationshipName>Distressed_Note_Stagings</relationshipName>
    <type>Lookup</type>
</CustomField>