force-app/main/default/objects/Distressed_Note_Staging__c/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Identifier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>