force-app/main/default/objects/Distressed_Note_Staging__c/fields/ProdID__c.field-meta.xml
<CustomField>
    <fullName>ProdID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ProdID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>