force-app/main/default/objects/Distressed_Note_Staging__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>