force-app/main/default/objects/Distressed_Note_Staging__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Title</label>
    <type>TextArea</type>
</CustomField>